// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconContainer should be rendered correctly 1`] = `
<div
  className="container uui-icon uui-enabled root icon-container-color-gray60"
  style={Object {}}
>
  <svg
    className=""
  />
</div>
`;

exports[`IconContainer should be rendered correctly with props 1`] = `
<div
  className="container uui-icon uui-enabled -clickable root icon-container-color-blue"
  onClick={[Function]}
  style={Object {}}
  tabIndex={0}
>
  <svg
    className="flipY rotate-90ccw"
  />
</div>
`;
